# pyheartex

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Installation.md
examples/: run_fastai_image_classifier.py
examples/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml  requirements.txt
examples/docker/config/: config.json  config.xml  tasks.json
examples/docker/scripts/: build.sh  build_and_deploy.sh  deploy.sh
examples/docker/src/: image_classifier.py  settings.py  useful_functions.py  wsgi.ini  wsgi.py
htx/: utils.py
notebooks/: NasNetMobile.ipynb  config.xml  fastai_modif.ipynb  first_requests.ipynb  imbalanced_data.ipynb  keras_modif.ipynb  keras_tensorflow.ipynb  libraries_and_scripts.ipynb  ml_backend.ipynb  model.ipynb
notebooks/configuration/: prepare_conf.xml
