[tool.poetry]
name = "pyheartex"
version = "0.0.5"
description = "Deploying machine learning for Heartex or Label Studio"
readme = "README.md"
authors = ["Heartex <hello@heartex.ai>"]
homepage = "https://github.com/heartexlabs/pyheartex"
repository = "https://github.com/heartexlabs/pyheartex.git"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
]
packages = [
    { include = "htx" }
]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "1.0.2"
attrs = "19.1.0"
rq = "1.0"
numpy = "1.16.3"
requests = "^2.23.0"
scikit-learn = { version="^0.22.2", optional=true }
fastai = { version="1.0.57", optional=true }
# TODO make the use of keras optionnal 
keras = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.extras]
sklearn = ["scikit-learn"]
fastai = ["fastai"]
all = ["scikit-learn", "fastai"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
